# joule-profiler

./: CHANGELOG.md  Cargo.toml  README.md  benchmark.sh  cpu_burn.sh  install.sh  plot.py  uninstall.sh
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  doc.yml  release.yml
cli/: CHANGELOG.md  Cargo.toml
cli/src/: config_table.rs  lib.rs  logging.rs  mapper.rs  output.rs  plugin.rs
cli/src/commands/: mod.rs  phases.rs  profile.rs
cli/src/output/: mod.rs
cli/src/output/displayer/: error.rs  mod.rs
cli/src/output/formats/: csv.rs  json.rs  mod.rs  terminal.rs
cli/tests/: integration_test.rs
core/: CHANGELOG.md  Cargo.toml
core/src/: config.rs  lib.rs  phase.rs  sensor.rs  transformer.rs  unit.rs
core/src/aggregate/: iteration.rs  metric.rs  mod.rs  phase.rs  sensor_result.rs
core/src/displayer/: mod.rs
core/src/orchestrator/: error.rs  mod.rs
core/src/output/: csv.rs  json.rs  mod.rs  terminal.rs
core/src/profiler/: error.rs  mod.rs  types.rs
core/src/source/: accumulator.rs  error.rs  event_emitter.rs  mock.rs  mod.rs  reader.rs  runtime.rs  types.rs
core/src/util/: file.rs  fs.rs  mod.rs  sys.rs  time.rs
core/tests/: integration_test.rs
docs/: REQUIREMENTS.md  book.toml
docs/src/: SUMMARY.md  architecture.md  introduction.md  phase-mode.md  quickstart.md
docs/src/architecture/: cli-module.md  core-module.md  overview.md  sources-workspace.md
docs/src/css/: book.css  pagetoc.css
docs/src/developer-guide/: adding-source.md  contributing.md  setup.md
docs/src/developer-guide/adding-source/: overview.md  trait-implementation.md
docs/src/examples/: library.md  listing-sensors.md  minimal-example.md  overview.md  phases-detection.md  source-implementation.md
docs/src/examples/outputs/: csv.md  json.md  outputs.md  terminal.md
docs/src/installation/: build-from-source.md  quick-install.md  uninstall.md
docs/src/outputs/: csv.md  json.md  output.md  terminal.md
docs/src/quickstart/: cli.md  installation.md  lib.md  usage.md
docs/src/sources/: available-sources.md  implement-custom-sources.md  nvml.md  overview.md
docs/src/sources/nvml/: introduction.md  metrics.md  setup.md
docs/src/sources/perf_event/: accuracy.md  how-it-works.md  introduction.md  perf_event_paranoid.md
docs/src/sources/rapl/: README.md  accuracy.md  backend-comparison.md  introduction.md  overview.md  perf-event.md  perf_events.md  powercap.md  rapl.md
docs/src/troubleshooting/: common-issues.md  overview.md
docs/src/tutorials/: install.md
docs/src/usage/: iterations.md  measurement.md  measurements.md  phases.md
docs/theme/css/: book.css
examples/data/: list-sensors  list-sensors.csv  list-sensors.json  phases  phases-iterations  phases-iterations.csv  phases-iterations.json  phases.csv  phases.json  simple-iterations.csv  simple-iterations.json  simple.csv  simple.json
examples/programs/: gpu.py  nbody  nbody.c  nbody.py  workload.py
initializers/docker/: Cargo.toml
initializers/docker/src/: lib.rs
notebooks/: .gitignore  README.md  phases.ipynb  quickstart.ipynb  requirements.txt
outputs/csv/: Cargo.toml
outputs/csv/src/: lib.rs
outputs/json/: Cargo.toml
outputs/json/src/: lib.rs
outputs/terminal/: Cargo.toml
outputs/terminal/src/: lib.rs
sources/nvml/: CHANGELOG.md  Cargo.toml
sources/nvml/src/: config.rs  error.rs  hardware.rs  lib.rs  snapshot.rs
sources/perf_event/: CHANGELOG.md  Cargo.toml
sources/perf_event/src/: config.rs  error.rs  event.rs  hardware.rs  lib.rs  snapshot.rs
sources/procfs/: Cargo.toml
sources/procfs/src/: lib.rs
sources/rapl/: CHANGELOG.md  Cargo.toml
sources/rapl/src/: domain_type.rs  error.rs  lib.rs  snapshot.rs  util.rs
sources/rapl/src/domain/: domain_type.rs  mod.rs  socket.rs
sources/rapl/src/perf/: compute.rs  config.rs  domain.rs  event.rs  mod.rs  snapshot.rs  socket.rs
sources/rapl/src/powercap/: compute.rs  config.rs  domain.rs  mod.rs  snapshot.rs  socket.rs
src/: cli.rs  config.rs  error.rs  errors.rs  lib.rs  measurement.rs
src/cli/: mapper.rs  mod.rs
src/cli/commands/: list_sensors.rs  mod.rs  phases.rs  simple.rs
src/cmd/: list_domains.rs  mod.rs  phases.rs  simple.rs
src/command/: list_sensors.rs  mod.rs  phases.rs  simple.rs
src/commands/: list_sensors.rs  mod.rs  phases.rs
src/config/: list_sensors.rs  mod.rs  profile.rs
src/core/: displayer.rs  manager.rs  measurement.rs  metric.rs  mod.rs  orchestrator.rs  phase.rs  profiler.rs  sensor.rs  source.rs
src/core/aggregate/: iteration.rs  metric.rs  mod.rs  phase.rs  sensor_result.rs
src/core/displayer/: error.rs  mod.rs
src/core/orchestrator/: error.rs  mod.rs
src/core/profiler/: builder.rs  error.rs  mod.rs  types.rs
src/core/source/: accumulator.rs  error.rs  mod.rs  reader.rs  result.rs  types.rs
src/measure/: common.rs  mod.rs  phases.rs  single.rs
src/output/: csv.rs  json.rs  mod.rs  terminal.rs
src/rapl/: domain.rs  mod.rs  snapshot.rs
src/source/: metric.rs  mod.rs
src/source/powercap/: domain.rs  mod.rs  snapshot.rs
src/source/rapl/: domain.rs  measure.rs  mod.rs  snapshot.rs
src/sources/: mod.rs
src/sources/rapl/: error.rs  mod.rs  snapshot.rs
src/sources/rapl/domain/: domain_type.rs  mod.rs  socket.rs
src/util/: command.rs  file.rs  logging.rs  mod.rs  platform.rs  time.rs
transformers/rapl-perf-attribution/: Cargo.toml
transformers/rapl-perf-attribution/src/: lib.rs
