[workspace]
resolver = "2"
members = [
    "core",
    "cli",
    "sources/rapl"
]

[workspace.package]
edition = "2024"
version = "1.0.0"
authors = ["Jérémy Woirhaye <jerem.woirhaye@gmail.com>", "François Gibier <francoisgibier.contact@gmail.com>"]
license = "MIT"
repository = "https://github.com/jwoirhaye/joule-profiler"
readme = "README.md"

[workspace.dependencies]
joule-profiler-core = { path = "core" }
anyhow = "1.0.100"
env_logger = "0.11.8"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.25", features = ["time", "macros", "rt-multi-thread", "sync"] }
thiserror = "2.0.17"
