[workspace]
resolver = "2"
members = [
    "core",
    "cli",
    "sources/rapl",
    "sources/nvml",
    "sources/perf_event",
    "initializers/docker"
]

[workspace.package]
edition = "2024"
version = "1.0.0"
authors = ["Jérémy Woirhaye <jerem.woirhaye@gmail.com>", "François Gibier <francoisgibier.contact@gmail.com>"]
license = "MIT"
repository = "https://github.com/jwoirhaye/joule-profiler"
readme = "README.md"

[workspace.dependencies]
joule-profiler-core = { path = "core" }
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
