[workspace]
resolver = "2"
members = [
    "core",
    "cli",
    "sources/rapl",
    "sources/nvml",
    "sources/perf_event"
]

[workspace.package]
edition = "2024"
version = "1.0.0"
authors = ["Jérémy Woirhaye <jerem.woirhaye@gmail.com>", "François Gibier <francoisgibier.contact@gmail.com>"]
license = "MIT"
repository = "https://github.com/jwoirhaye/joule-profiler"
readme = "README.md"

[workspace.dependencies]
joule-profiler-core = { path = "core" }

log = "0.4.28"
tokio = { version = "1.25", features = ["time", "rt-multi-thread", "macros", "sync", "rt"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
futures = "0.3.31"

# dev-dependencies
tempfile = "3"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
struct_field_names = "allow"