[package]
name = "joule-profiler-cli"
version = "1.0.0"
edition.workspace = true
repository.workspace = true

[[bin]]
name = "joule-profiler"
path = "src/bin/main.rs"

[dependencies]
joule-profiler-core = { path = "../core" }
source-rapl = { path = "../sources/rapl" }
clap = { version = "4.5.53", features = ["derive"] }
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
env_logger.workspace = true
log.workspace = true