[package]
name = "joule-profiler-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "CLI tool to measure program energy consumption"
keywords = ["energy", "profiling", "rapl", "nvml", "cli"]

[[bin]]
name = "joule-profiler"
path = "src/bin/main.rs"

[dependencies]
joule-profiler-core.workspace = true
source-rapl = { path = "../sources/rapl" }
source-nvml = { path = "../sources/nvml" }
anyhow.workspace = true
env_logger.workspace = true
log.workspace = true
thiserror.workspace = true
serde.workspace = true
clap = { version = "4.5.53", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
tokio = { version = "1.25", features = ["rt-multi-thread"] }