[package]
name = "joule-profiler-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for joule-profiler, handling orchestration and energy measurements"
keywords = ["energy", "profiling"]

[dependencies]
log.workspace = true
serde.workspace = true
tokio.workspace = true
thiserror.workspace = true
regex = "1.12.2"
derive_builder = "0.20.2"

[dev-dependencies]
tempfile = "3"
