[package]
name = "joule-profiler-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for joule-profiler, handling orchestration and energy measurements"
keywords = ["energy", "profiling"]

[dependencies]
log.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { version = "1.25", features = ["macros", "sync"] }
regex = "1.12.2"
derive_builder = "0.20.2"
libc = "0.2.183"
futures = "0.3.31"
libc = "0.2.181"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.25", features = ["rt"] }
