[package]
name = "displayer-csv"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CSV displayer for output format for joule-profiler"
keywords = ["energy", "displayer", "csv"]

[dependencies]
joule-profiler-core.workspace = true
log.workspace = true
thiserror.workspace = true
