[package]
name = "displayer-json"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Json displayer for output format for joule-profiler"
keywords = ["energy", "displayer", "json"]

[dependencies]
joule-profiler-core.workspace = true
log.workspace = true
thiserror.workspace = true
serde_json = { version = "1.0.145", features = ["preserve_order"] }