[package]
name = "displayer-terminal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal displayer for output format for joule-profiler"
keywords = ["energy", "displayer", "terminal"]

[dependencies]
joule-profiler-core.workspace = true
log.workspace = true
thiserror.workspace = true