[package]
name = "joule-profiler-source-procfs"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "procfs source for joule-profiler"
keywords = ["procfs"]

[dependencies]
joule-profiler-core.workspace = true
thiserror.workspace = true
tokio.workspace = true
futures.workspace = true

procfs = "0.18.0"
tokio-timerfd = "0.2.0"

[lints]
workspace = true
