[package]
name = "source-rapl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Intel RAPL energy measurement source for joule-profiler"
keywords = ["energy", "rapl", "intel", "hardware", "powercap"]

[dependencies]
joule-profiler-core.workspace = true
tokio-timerfd = "0.2.0"
log.workspace = true
thiserror.workspace = true
futures = "0.3.31"
tokio = { version = "1.25", features = ["time"] }
perf-event-open-sys = "5.0.0"

[dev-dependencies]
tempfile = "3"
