[package]
name = "source-rapl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Intel RAPL energy measurement source for joule-profiler"
keywords = ["energy", "rapl", "intel", "hardware", "powercap"]

[dependencies]
joule-profiler-core.workspace = true
log.workspace = true
thiserror.workspace = true
tokio.workspace = true
futures.workspace = true

tokio-timerfd = "0.2.0"
perf-event2 = "0.7.4"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true